--- a/assets/scss/_global.scss
+++ b/assets/scss/_global.scss
@@ -121,3 +121,15 @@ article._404 {
     text-shadow: none;
   }
 }
+menu.menu {
+  height: 85%;
+  padding: 20px;
+  z-index: 10;
+  background: rgba(#f7fbff, 0.45);
+  box-shadow: 0 8px 32px 0 rgba(#547a82, 0.35);
+  backdrop-filter: blur(5px);
+  -webkit-backdrop-filter: blur(5px);
+  border-radius: 10px 0 0 10px;
+  border: 1px solid rgba(#547a82, 0.15);
+  margin: auto;
+}
