--- a/assets/scss/articles/_jobs.scss
+++ b/assets/scss/articles/_jobs.scss
@@ -1,5 +1,13 @@
 .jobs {
   .container {
+    .skills-wrapper {
+      img.img-skill {
+        width: 50px;
+        height: 50px;
+        object-fit: contain;
+        margin: 5px;
+      }
+    }
     .jobs-wrapper {
       display: flex;
       align-items: flex-start;
