--- a/assets/scss/_media.scss
+++ b/assets/scss/_media.scss
@@ -9,7 +9,7 @@
       border-radius: 10px;
     }
   }
-  .menu {
+  menu.menu {
     border-radius: 10px;
   }
   .title {
@@ -29,7 +29,7 @@
     main {
       width: 95%;
     }
-    menu {
+    menu.menu {
       padding: 10px;
       margin-top: 0;
       width: auto;
@@ -62,7 +62,7 @@
       height: 100vh;
       flex-direction: column-reverse;
     }
-    menu {
+    menu.menu {
       margin: 0 auto;
       width: 100%;
       height: auto;
